crates/vox-codegen/tests/snapshots/golden_corpus_ts_smoke_test__golden_corpus_ts_emit_no_panic@mobile_camera.snap
---
source: crates/vox-codegen/tests/golden_corpus_ts_smoke_test.rs
expression: combined
---
=== PhotoUploader.tsx ===
import React, { useState } from "react";

export interface PhotoUploaderProps {
  on_image: (p0: string) => unit;
}

export function PhotoUploader({ on_image }: PhotoUploaderProps): React.ReactElement {
  const [status, set_status] = useState("idle");
  const [last_photo, set_last_photo] = useState(None);
  return (
    <div className="px-4">
    <div className={["flex", "flex-col", "uploader"].filter(Boolean).join(" ")}>
      <p className={["text-base", "status"].filter(Boolean).join(" ")}>
        {"Status: "}
      </p>
      <p className={"text-base"}>
        {status}
      </p>
      <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2"].filter(Boolean).join(" ")} onClick={(() => ((() => {
        set_status("capturing");
        (((_val) => { switch((_val as any)._tag) { case "Ok": { const uri = (_val as any)._p0 ?? (_val as any).value; return (() => {
        set_last_photo(Some(uri));
        set_status("done");
        on_image(uri);
      })(); } case "Error": { const msg = (_val as any)._p0 ?? (_val as any).value; return (() => {
        set_status("error: " + msg);
        mobile.notify("Camera Error", msg);
      })(); } default: return undefined; } })(mobile.take_photo()));
      })()))}>
        {"Take Photo"}
      </button>
      <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2"].filter(Boolean).join(" ")} onClick={(() => (mobile.vibrate()))}>
        {"Vibrate"}
      </button>
      {(((_val) => { switch((_val as any)._tag) { case "Some": { const uri = (_val as any)._p0 ?? (_val as any).value; return <img className={["max-w-full", "h-auto"].filter(Boolean).join(" ")} src={uri} alt={"captured"} />; } case "None": {  return <div className={["flex", "flex-col", "placeholder"].filter(Boolean).join(" ")}
    >
      {"No photo captured"}
    </div>; } default: return undefined; } })(last_photo))}
    </div>
    </div>
  );
}


=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [],
  "mutation_fns": [],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}


=== vox-app.tsx ===
// AUTO-GENERATED by Vox — web app root (flat mount; no routes declared).
// Do not edit; regenerate with `vox build`.
import React from "react";
import { PhotoUploader } from "./PhotoUploader";

export function VoxApp(): React.ReactElement {
  return <PhotoUploader on_image={undefined as any} />;
}


=== runtime-install.ts ===
// AUTO-GENERATED by Vox — browser runtime-global shims (web target).
// Do not edit; regenerate with `vox build`. Side-effect module: importing it
// installs `str`/`len`/`Speech`/`std`/`mobile` on globalThis so emitted code's
// bare references resolve in the browser.

declare global {
  // eslint-disable-next-line no-var
  var str: (x: unknown) => string;
  // eslint-disable-next-line no-var
  var len: (x: unknown) => number;
  // eslint-disable-next-line no-var
  var Speech: { transcribe_microphone: () => SpeechResult | Promise<SpeechResult> };
  // eslint-disable-next-line no-var
  var std: {
    time: { now_ms: () => number };
    crypto: { uuid: () => string; hash_secure: (s: string) => Promise<string> };
    json: { parse: (s: string) => unknown };
    regex: { compile: (p: string) => { _tag: "Ok"; _p0: RegExp } | { _tag: "Error"; _p0: string } };
  };
  // eslint-disable-next-line no-var
  var mobile: { transcribe_microphone: () => SpeechResult | Promise<SpeechResult> };
}

type SpeechResult = { _tag: "Ok"; _p0: string } | { _tag: "Error"; _p0: string };

(globalThis as unknown as { str: typeof globalThis.str }).str = (x: unknown): string => String(x);
(globalThis as unknown as { len: typeof globalThis.len }).len = (x: unknown): number => {
  if (Array.isArray(x)) return x.length;
  if (typeof x === "string") return x.length;
  if (x && typeof x === "object" && "length" in x) return (x as { length: number }).length;
  return 0;
};

// Synchronous SpeechResult when __VOX_TEST_TRANSCRIPT__ is set (e2e injection),
// else the Web Speech API / prompt fallback.
function transcribeMicrophone(): SpeechResult | Promise<SpeechResult> {
  const testTranscript = (globalThis as unknown as { __VOX_TEST_TRANSCRIPT__?: string })
    .__VOX_TEST_TRANSCRIPT__;
  if (typeof testTranscript === "string") {
    return { _tag: "Ok", _p0: testTranscript };
  }
  const SR =
    (window as unknown as { SpeechRecognition?: unknown; webkitSpeechRecognition?: unknown })
      .SpeechRecognition ||
    (window as unknown as { SpeechRecognition?: unknown; webkitSpeechRecognition?: unknown })
      .webkitSpeechRecognition;
  if (typeof SR === "function") {
    return new Promise<SpeechResult>((resolve) => {
      const r = new (SR as new () => {
        continuous: boolean;
        interimResults: boolean;
        lang: string;
        start(): void;
        onresult: (e: { results: ArrayLike<ArrayLike<{ transcript: string }>> }) => void;
        onerror: (e: { error: string }) => void;
      })();
      r.continuous = false;
      r.interimResults = false;
      r.lang = "en-US";
      r.onresult = (e) => {
        const transcript = e.results[0]?.[0]?.transcript ?? "";
        resolve({ _tag: "Ok", _p0: transcript });
      };
      r.onerror = (e) => resolve({ _tag: "Error", _p0: e.error });
      try {
        r.start();
      } catch (e) {
        resolve({ _tag: "Error", _p0: String(e) });
      }
    });
  }
  const text = window.prompt("Voice input (no STT engine available — type instead):");
  if (text) return { _tag: "Ok", _p0: text };
  return { _tag: "Error", _p0: "cancelled" };
}

const speechShim = { transcribe_microphone: transcribeMicrophone };
(globalThis as unknown as { Speech: typeof globalThis.Speech }).Speech = speechShim;
(globalThis as unknown as { mobile: typeof globalThis.mobile }).mobile = speechShim;

(globalThis as unknown as { std: typeof globalThis.std }).std = {
  time: { now_ms: () => Date.now() },
  crypto: {
    uuid: () =>
      typeof crypto !== "undefined" && "randomUUID" in crypto
        ? crypto.randomUUID()
        : `vox-${Date.now()}-${Math.random().toString(36).slice(2, 10)}`,
    hash_secure: async (s: string): Promise<string> => {
      const buf = new TextEncoder().encode(s);
      const digest = await crypto.subtle.digest("SHA-256", buf);
      return Array.from(new Uint8Array(digest))
        .map((b) => b.toString(16).padStart(2, "0"))
        .join("");
    },
  },
  json: { parse: (s: string) => JSON.parse(s) },
  regex: {
    compile: (p: string) => {
      try {
        return { _tag: "Ok" as const, _p0: new RegExp(p) };
      } catch (e) {
        return { _tag: "Error" as const, _p0: String(e) };
      }
    },
  },
};

export {};


=== entry.tsx ===
// AUTO-GENERATED by Vox — web entry point. Do not edit; regenerate with `vox build`.
// Mounts <VoxApp/> to #root. App-specific glue lives in the app-owned
// `src/app-hooks.ts` ({ wrapApp, onBoot }).
import "./runtime-install";
import React from "react";
import ReactDOM from "react-dom/client";
import { VoxApp } from "./vox-app";
import { wrapApp, onBoot } from "./app-hooks";

onBoot();

ReactDOM.createRoot(document.getElementById("root")!).render(
  <React.StrictMode>{wrapApp(<VoxApp />)}</React.StrictMode>,
);


=== app-hooks.tsx ===
// AUTO-GENERATED by Vox — default web app hooks. Wires the generic error
// boundary + PWA service-worker registration so a fresh Vox web app needs no
// hand-written glue. Apps wanting custom behavior override this file in a
// post-build step. entry.tsx imports `{ wrapApp, onBoot }` from here.
import React from "react";
import { ErrorBoundary } from "./vox-error-boundary";
import { registerServiceWorker } from "./vox-sw-register";

export function wrapApp(app: React.ReactElement): React.ReactElement {
  return <ErrorBoundary>{app}</ErrorBoundary>;
}

export function onBoot(): void {
  void registerServiceWorker();
}


=== vox-error-boundary.tsx ===
// AUTO-GENERATED by Vox — generic React error boundary. Do not edit.
import React from "react";

interface Props {
  children?: React.ReactNode;
}
interface State {
  hasError: boolean;
}

export class ErrorBoundary extends React.Component<Props, State> {
  // `props` and `setState` come from `React.Component<Props, State>`. Do NOT
  // re-declare them — a narrowed `setState` signature is incompatible with the
  // base class under the real `@types/react` (TS2416).
  state: State = { hasError: false };

  static getDerivedStateFromError(): State {
    return { hasError: true };
  }

  componentDidCatch(error: Error, info: { componentStack?: string }): void {
    console.error("[vox] uncaught render error:", error, info?.componentStack);
  }

  render(): React.ReactNode {
    if (this.state.hasError) {
      return (
        <div role="alert" style={{ padding: "2rem", textAlign: "center" }}>
          <h2>Something went wrong.</h2>
          <p>The app hit an unexpected error. Reload to continue.</p>
          <button
            onClick={() => {
              this.setState({ hasError: false });
              window.location.reload();
            }}
          >
            Reload
          </button>
        </div>
      );
    }
    return this.props.children;
  }
}


=== vox-sw-register.ts ===
// AUTO-GENERATED by Vox — service-worker registration (PWA). Do not edit.
export async function registerServiceWorker(swPath: string = "/sw.js"): Promise<void> {
  if (typeof navigator !== "undefined" && "serviceWorker" in navigator) {
    try {
      await navigator.serviceWorker.register(swPath);
    } catch (err) {
      console.error("[vox] service worker registration failed:", err);
    }
  }
}


=== mobile-utils.ts ===
// std.mobile — Web API implementation generated by Vox compiler
// Works on desktop browsers and mobile browsers (iOS Safari, Android Chrome).
// For app-store distribution, use `vox compile --target mobile-android|mobile-ios` (Tauri).

export const mobile = {
  async take_photo(): Promise<{ Ok?: string; Error?: string }> {
    try {
      const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
      const video = document.createElement("video");
      video.srcObject = stream;
      await video.play();
      const canvas = document.createElement("canvas");
      canvas.width = video.videoWidth;
      canvas.height = video.videoHeight;
      canvas.getContext("2d")!.drawImage(video, 0, 0);
      stream.getTracks().forEach(t => t.stop());
      return { Ok: canvas.toDataURL("image/jpeg") };
    } catch (e: any) {
      return { Error: e?.message ?? "Camera unavailable" };
    }
  },

  async take_photo_from_gallery(): Promise<{ Ok?: string; Error?: string }> {
    return new Promise(resolve => {
      const input = document.createElement("input");
      input.type = "file";
      input.accept = "image/*";
      input.onchange = () => {
        const file = input.files?.[0];
        if (!file) return resolve({ Error: "No file selected" });
        const reader = new FileReader();
        reader.onload = () => resolve({ Ok: reader.result as string });
        reader.onerror = () => resolve({ Error: "Read error" });
        reader.readAsDataURL(file);
      };
      input.click();
    });
  },

  notify(title: string, body: string): void {
    if ("Notification" in window && Notification.permission === "granted") {
      new Notification(title, { body });
    } else if ("Notification" in window && Notification.permission !== "denied") {
      Notification.requestPermission().then(p => {
        if (p === "granted") new Notification(title, { body });
      });
    }
  },

  vibrate(duration_ms: number = 200): void {
    if ("vibrate" in navigator) navigator.vibrate(duration_ms);
  },

  async get_location(): Promise<{ Ok?: string; Error?: string }> {
    return new Promise(resolve => {
      if (!("geolocation" in navigator)) return resolve({ Error: "Geolocation unavailable" });
      navigator.geolocation.getCurrentPosition(
        pos => resolve({ Ok: JSON.stringify({ lat: pos.coords.latitude, lng: pos.coords.longitude, accuracy: pos.coords.accuracy }) }),
        err => resolve({ Error: err.message })
      );
    });
  },

  async accelerometer(): Promise<{ Ok?: string; Error?: string }> {
    return new Promise((resolve, reject) => {
      const handler = (e: DeviceMotionEvent) => {
        window.removeEventListener("devicemotion", handler);
        const a = e.accelerationIncludingGravity;
        resolve({ Ok: JSON.stringify({ x: a?.x ?? 0, y: a?.y ?? 0, z: a?.z ?? 0 }) });
      };
      window.addEventListener("devicemotion", handler, { once: true });
      setTimeout(() => resolve({ Error: "Timeout" }), 2000);
    });
  },

  platform(): string {
    const ua = navigator.userAgent;
    if (/android/i.test(ua)) return "android";
    if (/iphone|ipad|ipod/i.test(ua)) return "ios";
    if (typeof (window as any).__TAURI__ !== "undefined") return "desktop";
    return "web";
  },

  has_camera(): boolean {
    return !!(navigator.mediaDevices && navigator.mediaDevices.getUserMedia);
  },

  copy_to_clipboard(text: string): void {
    navigator.clipboard?.writeText(text);
  },

  async read_clipboard(): Promise<{ Ok?: string; Error?: string }> {
    try {
      const t = await navigator.clipboard.readText();
      return { Ok: t };
    } catch (e: any) {
      return { Error: e?.message ?? "Clipboard unavailable" };
    }
  },

  useWaitUntilSync(): boolean {
    if (typeof window !== "undefined" && (window as any).React) {
        const [syncing, setSyncing] = (window as any).React.useState(false);
        (window as any).React.useEffect(() => {
            if ("serviceWorker" in navigator) {
                // Future integration with Workbox-Window events
                const handleOffline = () => setSyncing(true);
                const handleOnline = () => setSyncing(false);
                window.addEventListener("offline", handleOffline);
                window.addEventListener("online", handleOnline);
                setSyncing(!navigator.onLine);
                return () => {
                    window.removeEventListener("offline", handleOffline);
                    window.removeEventListener("online", handleOnline);
                };
            }
        }, []);
        return syncing;
    }
    return false;
  },

  async biometric_auth(prompt: string): Promise<{ Ok?: boolean; Error?: string }> {
    if (!window.PublicKeyCredential) return { Error: "WebAuthn not supported" };
    try {
      const challenge = new Uint8Array(32);
      crypto.getRandomValues(challenge);
      await navigator.credentials.get({
        publicKey: { challenge, userVerification: "required" }
      });
      return { Ok: true };
    } catch (e: any) {
      return { Error: e?.message ?? "Biometric auth failed" };
    }
  },

  async read_contacts(): Promise<{ Ok?: string; Error?: string }> {
    if (!("contacts" in navigator && "ContactsManager" in window)) {
      return { Error: "Contacts API not supported" };
    }
    try {
      const props = ["name", "email", "tel"];
      const opts = { multiple: true };
      const contacts = await (navigator as any).contacts.select(props, opts);
      return { Ok: JSON.stringify(contacts) };
    } catch (e: any) {
      return { Error: e?.message ?? "Failed to read contacts" };
    }
  },

  async share_text(text: string): Promise<{ Ok?: boolean; Error?: string }> {
    if (!navigator.share) return { Error: "Web Share API not supported" };
    try {
      await navigator.share({ text });
      return { Ok: true };
    } catch (e: any) {
      return { Error: e?.message ?? "Failed to share" };
    }
  },

  async store_file(name: string, base64: string): Promise<{ Ok?: boolean; Error?: string }> {
    try {
      // Very simple local persistence fallback via generic web API. For real mobile files, use the Tauri FS plugin.
      localStorage.setItem(`vox-file-${name}`, base64);
      return { Ok: true };
    } catch (e: any) {
      return { Error: e?.message ?? "Failed to store file" };
    }
  },

  async read_file(name: string): Promise<{ Ok?: string; Error?: string }> {
    try {
      const val = localStorage.getItem(`vox-file-${name}`);
      if (val !== null) return { Ok: val };
      return { Error: "File not found" };
    } catch (e: any) {
      return { Error: e?.message ?? "Failed to read file" };
    }
  },
  
  push: {
    async register(): Promise<{ Ok?: string; Error?: string }> { return { Error: "Push APIs require physical device or Service Worker implementation" }; },
    on_message(fn: (msg: string) => void): void { }
  }
};
